clusters/titania/apps/llm-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-ui
  labels:
    app.kubernetes.io/name: llm-ui
    app.kubernetes.io/instance: llm-ui
    app.kubernetes.io/service: llm-ui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: llm-ui
    app.kubernetes.io/instance: llm-ui
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
